--- a/index.html
+++ b/index.html
@@ -41,6 +41,45 @@
     function getBackgroundColor(x){
       if (dragging)
         let fraction = x/window.innerWidth;
+        return "hsl("+(fraction*360)+", 100%, 50%)";
+      }
+      else return "#222";
     }
+    function getLabelColor(x){
+      if (dragging) {
+        let fraction = x/window.innerWidth;
+        return "hsl("+(fraction*360+180)+", 100%, 50%)";
+      }
+      else return "white";
+    }
+    function down(event) {
+      dragging = true;
+      var x = event.pageX;
+      synth.triggerAttack(x);
+      label.innerHTML = Math.round(x) + 'Hz';
+      label.style.color = getLabelColor(x);
+      pad.style.color = getBackgroundColor(x);
+    }
+    function up(event) {
+      dragging = false;
+      synth.triggerRelease();
+      label.innerHTML = "CLICK / DRAG";
+      label.style.color = getLabelColor(x);
+      pad.style.color = getBackgroundColor(x);
+    }
+    function move(event) {
+      if (dragging) {
+        var x = event.pageX;
+        synth.setNote(x);
+        label.innerHTML = Math.round(x) + 'Hz';
+        label.style.color = getLabelColor(x);
+        pad.style.color = getBackgroundColor(x);
+      }
+    }
+
+pad.addEventListner('pointerdown', down);
+pad.addEventListner('pointerup', up);
+pad.addEventListner('pointermove', move);
+    
     </script>
 </html>
